--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "c-19",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/c-vid-app/",
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^2.9.4",
+    "date-fns": "^2.16.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
