--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Covid-19 Tracker",
+  "name": "C-19 Tracker",
   "icons": [
     {
       "src": "favicon.ico",
@@ -16,6 +16,12 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "c-vid-mask.png",
+      "type": "image/png",
+      "sizes": "240x240",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
